--- a/Camera2/Base.lproj/Main.storyboard
+++ b/Camera2/Base.lproj/Main.storyboard
@@ -21,9 +21,11 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jzT-wA-UDa">
                                 <rect key="frame" x="16" y="91" width="343" height="128"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QX7-VZ-Mre">
-                                <rect key="frame" x="126" y="268" width="123" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QX7-VZ-Mre">
+                                <rect key="frame" x="16" y="268" width="343" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="uZf-88-20e"/>
+                                </constraints>
                                 <state key="normal" title="カメラを起動する"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cb3-uD-EGO">
@@ -34,8 +36,11 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QX7-VZ-Mre" secondAttribute="trailing" constant="16" id="4m5-Du-RVE"/>
                             <constraint firstItem="jzT-wA-UDa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="FSe-RR-NaA"/>
                             <constraint firstItem="jzT-wA-UDa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="HLZ-2B-AyP"/>
+                            <constraint firstItem="QX7-VZ-Mre" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="dST-fr-fLw"/>
+                            <constraint firstItem="QX7-VZ-Mre" firstAttribute="top" secondItem="jzT-wA-UDa" secondAttribute="bottom" constant="30" id="foD-yj-l6z"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jzT-wA-UDa" secondAttribute="trailing" constant="16" id="gnm-xg-LHY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
