--- a/Camera2/Base.lproj/Main.storyboard
+++ b/Camera2/Base.lproj/Main.storyboard
@@ -18,30 +18,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jzT-wA-UDa">
-                                <rect key="frame" x="16" y="91" width="343" height="128"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jzT-wA-UDa">
+                                <rect key="frame" x="16" y="20" width="343" height="497"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QX7-VZ-Mre">
-                                <rect key="frame" x="16" y="268" width="343" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QX7-VZ-Mre">
+                                <rect key="frame" x="16" y="547" width="343" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="uZf-88-20e"/>
                                 </constraints>
                                 <state key="normal" title="カメラを起動する"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cb3-uD-EGO">
-                                <rect key="frame" x="134" y="318" width="107" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cb3-uD-EGO">
+                                <rect key="frame" x="16" y="607" width="343" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Uhq-YJ-Q86"/>
+                                </constraints>
                                 <state key="normal" title="SNSに投稿する"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="Cb3-uD-EGO" firstAttribute="top" secondItem="QX7-VZ-Mre" secondAttribute="bottom" constant="30" id="0Qy-v9-1sL"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QX7-VZ-Mre" secondAttribute="trailing" constant="16" id="4m5-Du-RVE"/>
                             <constraint firstItem="jzT-wA-UDa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="FSe-RR-NaA"/>
                             <constraint firstItem="jzT-wA-UDa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="HLZ-2B-AyP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Cb3-uD-EGO" secondAttribute="bottom" constant="30" id="MEh-ow-41g"/>
                             <constraint firstItem="QX7-VZ-Mre" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="dST-fr-fLw"/>
                             <constraint firstItem="QX7-VZ-Mre" firstAttribute="top" secondItem="jzT-wA-UDa" secondAttribute="bottom" constant="30" id="foD-yj-l6z"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jzT-wA-UDa" secondAttribute="trailing" constant="16" id="gnm-xg-LHY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Cb3-uD-EGO" secondAttribute="trailing" constant="16" id="np3-pz-Ry2"/>
+                            <constraint firstItem="Cb3-uD-EGO" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="qRz-GW-rKj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
