--- a/Camera2/Base.lproj/Main.storyboard
+++ b/Camera2/Base.lproj/Main.storyboard
@@ -27,7 +27,9 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="uZf-88-20e"/>
                                 </constraints>
-                                <state key="normal" title="カメラを起動する"/>
+                                <state key="normal" title="カメラを起動する">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cb3-uD-EGO">
                                 <rect key="frame" x="16" y="607" width="343" height="30"/>
@@ -35,7 +37,9 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Uhq-YJ-Q86"/>
                                 </constraints>
-                                <state key="normal" title="SNSに投稿する"/>
+                                <state key="normal" title="SNSに投稿する">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
