イメージビューをコードに接続

--- a/Camera2/Base.lproj/Main.storyboard
+++ b/Camera2/Base.lproj/Main.storyboard
@@ -57,6 +57,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="pictureImage" destination="jzT-wA-UDa" id="ojE-h3-zts"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
