--- a/Camera2/Base.lproj/Main.storyboard
+++ b/Camera2/Base.lproj/Main.storyboard
@@ -18,12 +18,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jzT-wA-UDa">
-                                <rect key="frame" x="16" y="20" width="343" height="497"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jzT-wA-UDa">
+                                <rect key="frame" x="16" y="20" width="343" height="557"/>
                                 <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QX7-VZ-Mre">
-                                <rect key="frame" x="16" y="547" width="343" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QX7-VZ-Mre">
+                                <rect key="frame" x="16" y="607" width="343" height="30"/>
                                 <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="uZf-88-20e"/>
@@ -41,6 +41,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QX7-VZ-Mre" secondAttribute="trailing" constant="16" id="4m5-Du-RVE"/>
                             <constraint firstItem="jzT-wA-UDa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="FSe-RR-NaA"/>
                             <constraint firstItem="jzT-wA-UDa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="HLZ-2B-AyP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="QX7-VZ-Mre" secondAttribute="bottom" constant="30" id="Nhg-bW-zel"/>
                             <constraint firstItem="QX7-VZ-Mre" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="dST-fr-fLw"/>
                             <constraint firstItem="QX7-VZ-Mre" firstAttribute="top" secondItem="jzT-wA-UDa" secondAttribute="bottom" constant="30" id="foD-yj-l6z"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="jzT-wA-UDa" secondAttribute="trailing" constant="16" id="gnm-xg-LHY"/>
