Layout : パーツをコードと関連付け

--- a/Camera2/Base.lproj/Main.storyboard
+++ b/Camera2/Base.lproj/Main.storyboard
@@ -65,42 +65,70 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uyN-ga-9H6">
-                                <rect key="frame" x="16" y="125" width="343" height="128"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uyN-ga-9H6">
+                                <rect key="frame" x="16" y="20" width="343" height="437"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xnh-49-xTl">
-                                <rect key="frame" x="149" y="318" width="77" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xnh-49-xTl">
+                                <rect key="frame" x="16" y="487" width="343" height="30"/>
                                 <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="T33-Af-FSc"/>
+                                </constraints>
                                 <state key="normal" title="エフェクト">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="effectButtonAction:" destination="rcn-K2-qZU" eventType="touchUpInside" id="yjE-Iu-xBo"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6oS-m9-Ecp">
-                                <rect key="frame" x="164" y="384" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6oS-m9-Ecp">
+                                <rect key="frame" x="16" y="547" width="343" height="30"/>
                                 <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="8lL-fj-Ng4"/>
+                                </constraints>
                                 <state key="normal" title="シェア">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="shareButtonAction:" destination="rcn-K2-qZU" eventType="touchUpInside" id="yaF-de-Jml"/>
+                                </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lwy-sp-YTa">
-                                <rect key="frame" x="164" y="448" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lwy-sp-YTa">
+                                <rect key="frame" x="16" y="607" width="343" height="30"/>
                                 <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="DOr-ZG-dnw"/>
+                                </constraints>
                                 <state key="normal" title="閉じる">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="closeButtonAction:" destination="rcn-K2-qZU" eventType="touchUpInside" id="KmM-F0-Z9a"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="uyN-ga-9H6" firstAttribute="top" secondItem="9s2-kW-kby" secondAttribute="top" id="2HK-8X-iYa"/>
+                            <constraint firstItem="9s2-kW-kby" firstAttribute="trailing" secondItem="6oS-m9-Ecp" secondAttribute="trailing" constant="16" id="3P0-98-7Ul"/>
+                            <constraint firstItem="Lwy-sp-YTa" firstAttribute="top" secondItem="6oS-m9-Ecp" secondAttribute="bottom" constant="30" id="3ab-Ky-ExK"/>
+                            <constraint firstItem="xnh-49-xTl" firstAttribute="top" secondItem="uyN-ga-9H6" secondAttribute="bottom" constant="30" id="487-2N-k8i"/>
+                            <constraint firstItem="Lwy-sp-YTa" firstAttribute="leading" secondItem="9s2-kW-kby" secondAttribute="leading" constant="16" id="9dk-1h-3Sz"/>
+                            <constraint firstItem="9s2-kW-kby" firstAttribute="bottom" secondItem="Lwy-sp-YTa" secondAttribute="bottom" constant="30" id="Fz3-qF-xJW"/>
                             <constraint firstItem="uyN-ga-9H6" firstAttribute="leading" secondItem="9s2-kW-kby" secondAttribute="leading" constant="16" id="HYC-M5-gL3"/>
+                            <constraint firstItem="9s2-kW-kby" firstAttribute="trailing" secondItem="Lwy-sp-YTa" secondAttribute="trailing" constant="16" id="JhD-cv-CaM"/>
+                            <constraint firstItem="6oS-m9-Ecp" firstAttribute="top" secondItem="xnh-49-xTl" secondAttribute="bottom" constant="30" id="Pmr-se-7Ge"/>
+                            <constraint firstItem="9s2-kW-kby" firstAttribute="trailing" secondItem="xnh-49-xTl" secondAttribute="trailing" constant="16" id="gN5-XA-HTr"/>
+                            <constraint firstItem="xnh-49-xTl" firstAttribute="leading" secondItem="9s2-kW-kby" secondAttribute="leading" constant="16" id="iJq-30-5Ll"/>
+                            <constraint firstItem="6oS-m9-Ecp" firstAttribute="leading" secondItem="9s2-kW-kby" secondAttribute="leading" constant="16" id="jJQ-zV-4dq"/>
                             <constraint firstItem="9s2-kW-kby" firstAttribute="trailing" secondItem="uyN-ga-9H6" secondAttribute="trailing" constant="16" id="ywT-4E-B2J"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="9s2-kW-kby"/>
                     </view>
+                    <connections>
+                        <outlet property="effectImage" destination="uyN-ga-9H6" id="0d2-rV-vVk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c5N-J9-NUm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
